[gd_scene load_steps=5 format=3 uid="uid://cgqtwojb0f3f2"]

[ext_resource type="Theme" uid="uid://g27u5fdw6jtd" path="res://ui/theme/main_theme.tres" id="1_20utr"]
[ext_resource type="Script" path="res://ui/scenes/top_bar.gd" id="1_q8vh0"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_5vok3"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_qt0ys"]

[node name="TopBar" type="HBoxContainer"]
custom_minimum_size = Vector2(0, 30)
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 20.0
grow_horizontal = 2
theme = ExtResource("1_20utr")
alignment = 1
script = ExtResource("1_q8vh0")

[node name="WeightStats" type="PanelContainer" parent="."]
layout_mode = 2
size_flags_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxEmpty_5vok3")

[node name="WeightLabel" type="Label" parent="WeightStats"]
layout_mode = 2
size_flags_vertical = 0
theme_override_font_sizes/font_size = 18
text = "Weight: 2.0/20.0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Spacer" type="ReferenceRect" parent="."]
custom_minimum_size = Vector2(16, 0)
layout_mode = 2
border_width = 0.0

[node name="PlayerStats" type="PanelContainer" parent="."]
layout_mode = 2
size_flags_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxEmpty_5vok3")

[node name="HPLabel" type="Label" parent="PlayerStats"]
layout_mode = 2
size_flags_vertical = 0
theme_override_font_sizes/font_size = 18
text = "HP: 0/10"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Spacer2" type="ReferenceRect" parent="."]
custom_minimum_size = Vector2(16, 0)
layout_mode = 2
border_width = 0.0

[node name="FloorNum" type="PanelContainer" parent="."]
layout_mode = 2
size_flags_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxEmpty_5vok3")

[node name="FloorLabel" type="Label" parent="FloorNum"]
layout_mode = 2
size_flags_vertical = 0
theme_override_font_sizes/font_size = 18
text = "Floor: 1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Spacer3" type="ReferenceRect" parent="."]
custom_minimum_size = Vector2(16, 0)
layout_mode = 2
border_width = 0.0

[node name="Information" type="PanelContainer" parent="."]
visible = false
layout_mode = 2
size_flags_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxEmpty_qt0ys")

[node name="InfoLabel" type="Label" parent="Information"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "[Pick a direction to interact with]"
horizontal_alignment = 1
vertical_alignment = 1
